--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <img src="main.png" alt="">
                 </div>
                 <div class="content">
-                    <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Siema jestem <span>Sara</span></h1>
-                    <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">I'm a <span></span></div>
-                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, perferendis quas consectetur possimus maxime consequatur cupiditate eos dolorum molestias praesentium error exercitationem rem labore illo, in dolor, odio corporis excepturi?</p>
+                    <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Mam na imię <span>Sara</span></h1>
+                    <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">usun to<span></span></div>
+                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Mam na imię Sara, mam 20 lat. Będąc nastolatką przez długi czas zmagałam się z różnymi problemami psychicznymi. Już w wieku 13 lat zdiagnozowano u mnie zaburzenia emocjonalne. Myśli o samobójstwie towarzyszyły mi codziennie przez kilka lat. Ciągły brak motywacji, brak siły do wykonania najprostszych czynności i przewlekły stres sprawiały, że z każdym dniem mój organizm pogrążał się w coraz gorszym stanie. Zaczęłam podejmować działania wręcz destukcyjne, które w tamtym momencie wydawały się dla mnie kojące. Nie miałam już żadnej nadziei, że może być lepiej. Byłam przekonana, że już nigdy nie będę szczęśliwa. Dziś, mimo licznych problemów zdrowotnych, będących konsekwencją mojego stanu psychicznego sprzed kilku lat, potrafię docenić każdy dzień. Po ponad pięciu latach w końcu mogę z pełnym przekonaniem stwierdzić, że jestem osobą szczęśliwą. Przeszłam długą i trudną drogę, ale dzięki wsparciu wspaniałych ludzi wokół mnie na nowo cieszę się z życia i budzę się każdego dnia z chęcią do działania. Niestety, skutki dawnych problemów odczuwam do dziś. Przewlekły stan zapalny niemal całego układu pokarmowego codziennie powoduje u mnie uciążliwe dolegliwości, które utrudniają normalne funkcjonowanie. Co więcej, mój obecny stan zdrowia niesie wysokie ryzyko rozwoju nawet nowotworów. Mimo tego wierzę, że w końcu wyzdrowieję i wszystko się ułoży. Chciałabym, aby ludzie byli świadomi do czego może doprowadzić ignorowanie takich stanów i zwlekanie z leczniem chorób i zaburzeń psychicznych. Chciałabym aby każda osoba, która zmaga się z problemami psychicznymi mogła zaznać spokoju, bo wiem, jakie to jest okropne doświadczenie i jaki może mieć niekorzystny wpływ na jakość życia, a nawet jego utratę.</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
                         <a href="#" ><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -50,7 +50,7 @@
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
-                        <button>poka dupe
+                        <button>jak to usunac
                         </button>
                     </div>
                 </div>
